# ThreatOS

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  MISSION.md  Makefile  README.md  SECURITY.md  banana-pi.sh  banana-pro.sh  beaglebone-black.sh  build-desktop-image.sh  build-in-tmp.sh  build-installer.sh  build-rootfs.sh  build-threatos.sh  build-wsl.sh  build.sh  builder.txt.example  chromebook-exynos.sh  chromebook-nyan.sh  chromebook-veyron.sh  cubieboard2.sh  cubietruck.sh  cubox-i4pro.sh  cubox.sh  devices.yml  docker-build-extra.sh  docker-build.sh  docker-compose.mirrorbits.yml  docker-compose.yml  gateworks-newport.sh  gateworks-ventana.sh  imx-6ull-evk.sh  mini-x.sh  nanopc-t.sh  nanopi-neo-plus2.sh  (+25 more)
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/: 404.html  www.md
archived/: efikamx.sh  luna.sh  odroid-w-devkit.sh  odroid-w.sh  threatostap.sh
auto/: config
build-scripts/: Dockerfile  build-config  build-config-desktop  build.sh  check-dependencies.sh  fix-hook-extensions.sh  select-desktop-variant.sh  update-package-versions.sh
build-vm/: Dockerfile  README.md  build-in-container.sh  build.sh  build.sh.new  image.yaml  main.yaml  rootfs.yaml
common.d/: base_image.sh  build_deps.sh  check.sh  finish_image.sh  functions.sh  packages.sh  radxa_zero.sh  variables.sh
config/: common  desktop-variants.conf
docker/: .editorconfig  Dockerfile  Dockerfile.mirrorbits  docker-build.sh  docker-compose.yml  docker-publish.sh  docker-run.sh  docker-test.sh
docs/: 404.html  desktop-variants.md
tools/appmgr/: README.md  install.sh  pyproject.toml  pytest.ini  threatos-appmgr
tools/appmgr/appmgr/: __init__.py  builder.py
tools/appmgr/appmgr/cli/: __init__.py  main.py
tools/appmgr/appmgr/core/: __init__.py  application.py  exceptions.py  runtime.py
tools/appmgr/appmgr/models/: __init__.py
tools/appmgr/appmgr/utils/: __init__.py  config.py  logging.py
tools/appmgr/templates/example-app/: docker-compose.yml
tools/appmgr/tests/: conftest.py
tools/appmgr/tests/integration/: test_cli.py
tools/appmgr/tests/unit/: test_application.py  test_models.py  test_runtime.py  test_utils_config.py  test_utils_logging.py
(+172 files in other folders)
